[project]
name = "persam-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.8.20"
dependencies = [
    "argparse>=1.4.0",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "opencv-python>=4.12.0.88",
    "timm>=1.0.20",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "tqdm>=4.67.1",
]
